--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
   "author": "moacdev.com",
   "authors": [
     {
-      "name": "Tim Coulter",
-      "email": "tim@timothyjcoulter.com",
+      "name": "Ace lee",
+      "email": "ace@daytokens.com",
       "url": "https://github.com/dacelee"
     }
   ],
